add status class to button

--- a/app/design/frontend/base/default/template/Lybe/customer/widget/taxvat.phtml
+++ b/app/design/frontend/base/default/template/Lybe/customer/widget/taxvat.phtml
@@ -57,6 +57,8 @@
         var elem = $('validation_result');
         elem.removeAttribute('style');
 
+        var btn = $('general_store_information_validate_vat_number');
+
         result = '<?php echo $this->__('Loading...') ?>';
         elem.update(result);
         params = {
@@ -74,14 +76,17 @@
                         if (response == 1) {
                             result = '<?php echo $this->__('VAT Number is valid') ?>';
                             elem.removeClassName('fail').addClassName('success').update(result).setStyle({background: 'green', border : 'green'});
+                            btn.removeClassName('fail').addClassName('success');
                         } else {
                             result = '<?php echo $this->__('VAT Number is Invalid') ?>';
                             elem.removeClassName('success').addClassName('fail').update(result).setStyle({background: 'red', border : 'red'});
+                            btn.removeClassName('success').addClassName('fail');
                         }
                     } catch (e) {
                         result = '<?php echo $this->__('Check your VAT') ?>';
                         elem.update(result);
                         elem.removeClassName('success').addClassName('fail').setStyle({background: 'red', border : 'red'});
+                        btn.removeClassName('success').addClassName('fail');
                     }
 
                 }
